# cpp_calc

./: CMakeLists.txt
headers/: calculator.h  operations.h  parser.h  pluginManager.h  plugin_manager.h
plugins/: CMakeLists.txt  exp.cpp  log.cpp  sin.cpp
src/: CMakeLists.txt  calculator.cpp  main.cpp  operations.cpp  parser.cpp  pluginManager.cpp  plugin_manager.cpp
